<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TaskMob</string>
   	<string name="loading_tasks">loading tasks</string>
	<string name="no_tasklists">No tasks to display</string>
	<string name="add_tasklist">Add</string>
	<string name="add_tasklist_hint">Add Task List Here</string>
	<string name="task_list">Task List</string>
	<string name="add_task">Add Task</string>
	<string name="new_task_hint">Task Name</string>
	<string name="change_date">Change the Due Date</string>
	<string name="date_display">Due Date: None</string>
	<string name="priority">Priority</string>
	<string-array name="priorities">
        <item>Normal Priority</item>
        <item>High Priority</item>
    </string-array>
   	<string name="username">Username</string>
   	<string name="password">Password</string>
   	<string name="login">Login</string>
   	<string name="createuser">Create User</string>
	
	
    
</resources>
